--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,15 @@ body {
   font-family: Helvetica, sans-serif;
   height: 100vh;
   display: flex;
+  cursor: crosshair;
   justify-content: center;
   align-items: center;
-  background-color: #f0f0f0;
+  background-color: #0f0f0f;
   overflow:hidden;
 }
+
+
+/* --- LOADING SCREEN --- */
 
 /* Loading screen styles */
 #loading-screen {
@@ -18,12 +22,12 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #f0f0f0;
-  color: #1a1a1a;
+  background-color: #0f0f0f; /* #f0f0f0*/
+  color: #e6e6e6;
   display: flex;
   justify-content: center;
   z-index: 9999;
-  transition: opacity 1s ease;
+  transition: opacity 1s ease-in-out;
 }
 
 /* Fade-out effect for the loading screen */
@@ -36,7 +40,7 @@ body {
   position: absolute;
   align-self:center;
   text-align: center;
-  font-size: 10px;
+  font-size: 9px;
 }
 
 /* Loading bar container */
@@ -46,7 +50,7 @@ body {
   align-self:flex-end;
   width: 150px;
   height: 1.5px;
-  background-color: #e0e0e0;
+  background-color: #1f1f1f;
   border-radius: 0.75px;
   overflow: hidden;
   margin-bottom: 100px;
@@ -56,8 +60,8 @@ body {
 #loading-fill {
   height: 100%;
   width: 0;
-  background-color: #1a1a1a;
-  transition: width 0.5s ease-in-out; /* Default transition, will be overridden in JS */
+  background-color: #e6e6e6;
+  transition: width 2s ease-in-out; 
 }
 
 /* Hide the actual content initially */
@@ -66,40 +70,87 @@ body {
 }
 
 
-.circle-grid {
-    position: relative;
-    height: 100%;
-    width: 100%;
+/* --- MAIN PAGE --- */
+
+
+header{
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(255,0,0,0);
+    position: absolute;
+  
 }
 
+.pill-box {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  left: 50%;
+    transform: translateX(-50%);
+  bottom: 0;
+}
+
+.pill-box li {
+  margin: 0 10px;
+}
+
+.pill {
+  padding: 10px 20px;
+  background-color: rgba(0,0,0,0);
+  color: white;
+  border: 2px dotted #ddd;
+  font-size: 12px;
+  cursor: pointer;
+  text-align: center;
+  max-width: 100px;
+  white-space: nowrap;
+  border-radius: 9999px;
+  transition: background-color 0.3s ease;
+}
+
+.pill:hover {
+  background-color: #ccc;
+}
+
+.pill1 {order: 3;}.pill2 {order: 4;}.pill3 {order: 5;}.pill4 {order: 2;}.pill5 {order: 1;}
+
 .circle{
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     z-index: -10;
-    height: 100%;
-    width: 100%;
-    background-color: #f0f0f0;
-    background-image: radial-gradient(#b5b5b5 1.5px, transparent 1.5px);
-    background-size: 40px 40px;
+    
+    height: 100vh;
+    width: 100vw;
+    
+    /* Circle pattern */
+    background-image: radial-gradient(#808080 min(0.2vw,0.2vh), transparent min(0.2vw,0.2vh));
+    background-size: min(4vw, 4vh) min(4vw, 4vh);
+
+    /* Initial scale for zoom effect */
     transform: scale(0.25);
     animation: zoomGrid 2s forwards;
+    
+    position: relative;
+    filter: drop-shadow(0 0 0 #595959);
+    
+    transition: filter 0;
 }
-.pattern-overlay {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-image: radial-gradient(#f0f0f0 1.5px, transparent 1.5px);
-    background-size: 40px 40px;
-    mask-image: radial-gradient(ellipse 50% 50% at 50% 50%, transparent 70%, #000 100%);
+
+.gradient-overlay {
+    height: 100vh;
+    width: 100vw;
+    background: radial-gradient(circle, rgba(15, 15, 15, 0) 0%, rgba(15, 15, 15, 1) 100%);
+    position:absolute;
+    pointer-events: none;
+    z-index: 9999;
 }
+
 @keyframes zoomGrid {
     from {
-        transform: scale(0.25); /* Start small */
+        transform: scale(0.25);
     }
     to {
-        transform: scale(1); /* Final size */
+        transform: scale(1);
     }
 }
