--- a/styles.css
+++ b/styles.css
@@ -1,149 +1,192 @@
-/* General styles for the body */
 body {
-  margin: 0;
-  padding: 0;
-  font-family: Helvetica, sans-serif;
-  height: 100vh;
-  display: flex;
-  cursor: crosshair;
-  justify-content: center;
-  align-items: center;
-  background-color: #0f0f0f;
-  overflow:hidden;
+    font-family: Helvetica, sans-serif;
+    margin: 0; 
+    height: 500vh;
+    width: 110vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: move;
+    
+    background-color: #0f0f0f; /*#0f0f0f*/
+    background-size: min(4vw, 4vh) min(4vh, 4vh);
+    background-position: center;
+    
+    
+    overflow: hidden;
+    user-select: none;
 }
 
+/* Background */
+.circle {
+    position: absolute;
+    z-index: -9;
+    cursor: move;
+    
+    top:0;
+    left:0;
+    height: 100vh;
+    width: 110vw;
+    
+    background-color: rgba(0,100,0,0); /*#0f0f0f*/
+    background-image: radial-gradient(#adadad min(0.1vw, 0.1vh), transparent min(0.15vw, 0.15vh));
+    background-size: min(4vw, 4vh) min(4vh, 4vh);
+    background-position: center;
+    
+    
+    /* Zoom effect */
+    transform: scale(0.25);
+    animation: zoomGrid 2s forwards;
+    
+    filter: drop-shadow(0 0 0 #595959);
+    transition: filter 0;
+}
 
 /* --- LOADING SCREEN --- */
-
-/* Loading screen styles */
 #loading-screen {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #0f0f0f; /* #f0f0f0*/
-  color: #e6e6e6;
-  display: flex;
-  justify-content: center;
-  z-index: 9999;
-  transition: opacity 1s ease-in-out;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #0f0f0f;
+    color: #e6e6e6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;
+    transition: opacity 1s ease-in-out;
 }
 
-/* Fade-out effect for the loading screen */
 #loading-screen.fade-out {
-  opacity: 0;
+    opacity: 0;
 }
 
-/* Loading container */
 .loading-container {
-  position: absolute;
-  align-self:center;
-  text-align: center;
-  font-size: 9px;
+    text-align: center;
+    font-size: min(1.2vw, 1.2vh);
 }
 
-/* Loading bar container */
 .loading-bar {
-  position: absolute;
-  justify-content: center;
-  align-self:flex-end;
-  width: 150px;
-  height: 1.5px;
-  background-color: #1f1f1f;
-  border-radius: 0.75px;
-  overflow: hidden;
-  margin-bottom: 100px;
+    position: absolute;
+    justify-content: center;
+    align-self: flex-end;
+    width: min(20vw, 20vh);
+    height: min(0.2vw, 0.2vh);
+    background-color: #1f1f1f;
+    border-radius: 9999px;
+    overflow: hidden;
+    margin-bottom: min(13.33vw, 13.33vh);
 }
 
-/* Loading bar fill */
 #loading-fill {
-  height: 100%;
-  width: 0;
-  background-color: #e6e6e6;
-  transition: width 2s ease-in-out; 
+    height: 100%;
+    width: 0;
+    background-color: #e6e6e6;
+    transition: width 2s ease-in-out;
 }
 
-/* Hide the actual content initially */
-#content.hidden {
-  display: none;
-}
 
 
 /* --- MAIN PAGE --- */
 
-
-header{
+/* Header */
+header {
     height: 100vh;
     width: 100vw;
-    background-color: rgba(255,0,0,0);
+    background-color: rgba(255, 0, 0, 0);
     position: absolute;
-  
+    z-index: 9999;
+    display: none;
 }
 
-.pill-box {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  width: 100%;
-  left: 50%;
+
+/* Date */
+.date-display {
+    position: fixed;
+    top: min(2.7vw, 2.7vh);
+    left: 50%;
     transform: translateX(-50%);
-  bottom: 0;
+    text-align: center;
+}
+
+.year {
+    font-size: min(3vw, 3vh);
+    font-weight: lighter;
+    color: #cccccc;
+}
+
+.month {
+    font-size: min(1.5vw, 1.5vh);
+    font-weight: lighter;
+    color: #cccccc;
+}
+
+/* Index */
+.pill-box {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
 }
 
 .pill-box li {
-  margin: 0 10px;
+    margin: 0 min(1.2vw, 1.2vh);
 }
 
 .pill {
-  padding: 10px 20px;
-  background-color: rgba(0,0,0,0);
-  color: white;
-  border: 2px dotted #ddd;
-  font-size: 12px;
-  cursor: pointer;
-  text-align: center;
-  max-width: 100px;
-  white-space: nowrap;
-  border-radius: 9999px;
-  transition: background-color 0.3s ease;
+    padding: min(0.9vw, 0.9vh) min(1.8vw, 1.8vh);
+    color: #e6e6e6;
+    background-color: rgba(0, 0, 0, 0.5);
+    border: min(0.21vw, 0.21vh) solid #575757;
+    font-size: min(1.82vw, 1.82vh);
+    font-family: Helvetica, sans-serif;
+    cursor: pointer;
+    text-align: center;
+    max-width: min(13.97vw, 13.97vh);
+    white-space: nowrap;
+    border-radius: 9999px;
+    transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out, border 0.3s ease-in-out;
 }
 
 .pill:hover {
-  background-color: #ccc;
+    background-color: rgba(200, 200, 200, 0.15);
+    transform: scale(1.05);
+    border-color: white;
+    border-style: solid;
 }
 
 .pill1 {order: 3;}.pill2 {order: 4;}.pill3 {order: 5;}.pill4 {order: 2;}.pill5 {order: 1;}
 
-.circle{
-    z-index: -10;
-    
-    height: 100vh;
-    width: 100vw;
-    
-    /* Circle pattern */
-    background-image: radial-gradient(#808080 min(0.2vw,0.2vh), transparent min(0.2vw,0.2vh));
-    background-size: min(4vw, 4vh) min(4vw, 4vh);
 
-    /* Initial scale for zoom effect */
-    transform: scale(0.25);
-    animation: zoomGrid 2s forwards;
-    
-    position: relative;
-    filter: drop-shadow(0 0 0 #595959);
-    
-    transition: filter 0;
+/* Scrollable background */
+.scrollable-content {
+    height: 500vh;
+    width: 110vw;
+    cursor: move;
 }
 
+
 .gradient-overlay {
-    height: 100vh;
-    width: 100vw;
-    background: radial-gradient(circle, rgba(15, 15, 15, 0) 0%, rgba(15, 15, 15, 1) 100%);
-    position:absolute;
+    position: fixed; /* Changed to fixed */
+    height: 95vh;
+    width: 95vw;
+    top: 0; /* Center vertically */
+    left: 0; /* Center horizontally */
+    transform: translate(-50%, -50%) scale(0.25);
+    border-width: 2.5vh 2.5vw 2.5vh 2.5vw;
+    border-style: solid;
+    border-color: rgba(15, 15, 15, 1);
+    background: radial-gradient(rgba(15, 15, 15, 0) 0%, rgba(15, 15, 15, 1) 70%);
     pointer-events: none;
-    z-index: 9999;
+    z-index: 1000;
+    animation: zoomGrid 2s forwards;
 }
 
 @keyframes zoomGrid {
