--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: Helvetica, sans-serif;
     margin: 0; 
-    height: 500vh;
+    height: 400vh;
     width: 110vw;
     display: flex;
     justify-content: center;
@@ -27,17 +27,17 @@ body {
     top:0;
     left:0;
     height: 100vh;
-    width: 110vw;
+    width: 100vw;
     
     background-color: rgba(0,100,0,0); /*#0f0f0f*/
-    background-image: radial-gradient(#adadad min(0.1vw, 0.1vh), transparent min(0.15vw, 0.15vh));
+    background-image: radial-gradient(#c7c7c7 min(0.1vw, 0.1vh), transparent min(0.15vw, 0.15vh));
     background-size: min(4vw, 4vh) min(4vh, 4vh);
     background-position: center;
     
     
     /* Zoom effect */
     transform: scale(0.25);
-    animation: zoomGrid 2s forwards;
+    animation: zoomGrid 2s forwards 2s;
     
     filter: drop-shadow(0 0 0 #595959);
     transition: filter 0;
@@ -167,26 +167,27 @@ header {
 
 /* Scrollable background */
 .scrollable-content {
-    height: 500vh;
+    height: 400vh;
     width: 110vw;
     cursor: move;
 }
 
 
 .gradient-overlay {
-    position: fixed; /* Changed to fixed */
-    height: 95vh;
-    width: 95vw;
-    top: 0; /* Center vertically */
-    left: 0; /* Center horizontally */
-    transform: translate(-50%, -50%) scale(0.25);
-    border-width: 2.5vh 2.5vw 2.5vh 2.5vw;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    transform:scale(0.25);
+    box-shadow: 0 0 0 min(100vw, 100vh) #0f0f0f; 
+    border-width: 0vh 0vw 0vh 0vw;
     border-style: solid;
     border-color: rgba(15, 15, 15, 1);
     background: radial-gradient(rgba(15, 15, 15, 0) 0%, rgba(15, 15, 15, 1) 70%);
     pointer-events: none;
     z-index: 1000;
-    animation: zoomGrid 2s forwards;
+    animation: zoomGrid 2s forwards 2s;
 }
 
 @keyframes zoomGrid {
