--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,7 @@ body {
     background-image: radial-gradient(rgb(199, 199, 199) min(0.1vw, 0.1vh), transparent min(0.15vw, 0.15vh));
     background-size: min(4vw, 4vh) min(4vh, 4vh);
     transform: scale(0.25);
-    animation-timeline: auto;
-    animation-range-start: normal;
-    animation-range-end: normal;
+    
     filter: drop-shadow(rgb(89, 89, 89) 0px 0px 0px);
     background-position: center center;
     animation: 2s ease 2s 1 normal forwards running zoomGrid;
@@ -129,6 +127,7 @@ header {
 .pill-box {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
     position: fixed;
     width: 100%;
