--- a/styles.css
+++ b/styles.css
@@ -69,10 +69,9 @@ body {
 }
 .loading-bar {
     position: fixed;
-    justify-content: center;
     align-self: flex-end;
     width: min(20vw, 20vh);
-    height: min(0.4vw, 0.4vh);
+    height: max(1px, min(0.2vw, 0.2vh));
     background-color: #e0e0e0;
     margin-bottom: min(13.33vw, 13.33vh);
     border-radius: 9999px;
