--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,9 @@ body {
 #content{
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 #content.fade-in{
     opacity: 1;
@@ -153,7 +156,7 @@ nav{
 
 .pill:hover {
     background-color: rgba(25, 25, 25, 0.95);
-    transform: scale(1.05);
+    transform: scale(0.93);
     border-color: black;
     color: white;
 }
@@ -179,12 +182,7 @@ nav{
 }
 
 
-/* Scrollable content */
-.scrollable-content {
-    height: 400vh;
-    width: 120vw;
-    cursor: move;
-}
+
 
 /* Elipse overlay */
 .gradient-overlay {
@@ -201,20 +199,20 @@ nav{
     background: radial-gradient(rgba(240, 240, 240, 0) 0%, rgba(240, 240, 240, 1) 70%);
     pointer-events: none;
     z-index: 1000;
-    animation: zoomGrid 2s forwards 2s;
+    animation: zoomGrid 2s forwards 2.5s;
 }
 
 
 /* Background */
 .circle {
     position: absolute;
-    z-index: -9;
+    z-index: 1;
     top: 0;
-    left: 10vw;
+    left: 0vw;
     height: 100vh;
-    width: 100vw;
+    width: 120vw;
     
-    background-color: rgba(0, 100, 0, 0);
+    background-color: rgba(255, 255, 255, 0); /*las drop shadows no funcionan*/
     background-image: radial-gradient(black min(0.12vw, 0.12vh), transparent min(0.15vw, 0.15vh));
     background-size: min(4vw, 4vh) min(4vw, 4vh);
     
@@ -222,11 +220,22 @@ nav{
     animation-timeline: auto;
     animation-range-start: normal;
     animation-range-end: normal;
-    animation: 2s ease 2s 1 normal forwards running zoomGrid;
+    animation: 2s ease 2.5s forwards zoomGrid;
     
     filter: drop-shadow(#a6a6a6 0px 0px 0px);
     background-position: center center;
     
+}
+
+.background {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    background-color: aquamarine;
+    z-index: -1;
 }
 
 
