--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     cursor: move;
     pointer-events: auto;
 
-    background-color: rgba( 0, 0, 0, 0); /*#0f0f0f*/
+    background-color: #3c3c3c; /*#0f0f0f*/
     background-size: min(4vw, 4vh) min(4vw, 4vh);
     background-position: center;
     
@@ -105,20 +105,26 @@ header {
     position: fixed;
     top: min(1.5vw, 1.5vh);
     z-index: 109001;
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
+    left: min(1.5vw, 1.5vh);
+    text-align: left;
     user-select: none;
+    margin: 0;
+    padding: 0;
+    line-height: 0.9;
 }
 .year {
-    font-size: min(3vw, 3vh);
+    font-size: min(10vw, 10vh);
     font-weight: bold;
-    color: #191919;
+    color: #e6e6e6;
 }
 .month {
-    font-size: min(1.5vw, 1.5vh);
+    font-size: min(5vw, 5vh);
     font-weight: bold;
-    color: #191919;
+    color: #e6e6e6;
+}
+
+.scrollBar {
+    
 }
 
 
@@ -150,25 +156,25 @@ nav{
 }
 
 .pill {
-    color: #191919;
-    background-color: rgba(255, 255, 255, 0.5);
-    font-size: min(1.82vw, 1.82vh);
+    color: #e6e6e6;
+    background-color: rgba(255, 255, 255, 0);
+    font-size: min(2.18vw, 2.18vh);
     font-weight: bold;
     font-family: Helvetica, sans-serif;
     cursor: pointer;
     
-    padding: min(0.9vw, 0.9vh) min(1.8vw, 1.8vh);
-    border-width: min(0.21vw, 0.21vh);
+    padding: min(1.08vw, 1.08vh) min(2.18vw, 2.18vh);
+    border-width: min(0.25vw, 0.25vh);
     border-style: solid;
-    border-color: #a8a8a8;
+    border-color: rgba(87, 87, 87, 0);
     border-radius: 9999px;
     transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out, border 0.3s ease-in-out, color 0.3s ease;
 }
 
 .pill:hover {
-    background-color: rgba(25, 25, 25, 0.95);
+    background-color: rgba(87, 87, 87, 0);
     transform: scale(0.93);
-    border-color: black;
+    border-color: rgba(87, 87, 87, 0.8);
     color: white;
 }
 
@@ -207,7 +213,7 @@ nav{
     border-width: 0vh 0vw 0vh 0vw;
     border-style: solid;
     border-color: rgba(15, 15, 15, 1);
-    background: radial-gradient(rgba(240, 240, 240, 0) 0%, rgba(240, 240, 240, 1) 70%);
+    background: radial-gradient(rgba(39, 39, 39, 0) 0%, rgba(39, 39, 39, 0.95) 70%);
     pointer-events: none;
     z-index: 1000;
     animation: zoomGrid 2s forwards 2.5s;
@@ -224,7 +230,7 @@ nav{
     width: 300vw;
     
     background-color: rgba(255, 0, 0, 0); /*sino las drop shadows no funcionan*/
-    background-image: radial-gradient(black min(0.12vw, 0.12vh), transparent min(0.15vw, 0.15vh));
+    background-image: radial-gradient(white min(0.12vw, 0.12vh), transparent min(0.15vw, 0.15vh));
     background-size: min(4vw, 4vh) min(4vw, 4vh);
     
     /*transform: scale(0.25);
@@ -238,8 +244,7 @@ nav{
     
     pointer-events: auto;
     
- 
-    
+    transition: filter 0.1s ease;  
 }
 
 .background.scroll {
@@ -250,23 +255,25 @@ nav{
     position: fixed;
     height: 100vh;
     width: 100vw;
-    top: 50vw;
-    left: 50vh;
+    top: 0;
+    left: 0;
     pointer-events: auto;
-    background-color: rgba(255, 255, 255, 1);
+    background-image: radial-gradient(circle 500px at 50% 200px, #3e3e3e, transparent);
     z-index: -1;
 }
 
 .card {
     position: relative;
-    width: 50px;
-    height: 50px;
-    background-color: rgba(255, 0, 0, 0.7);
-    border-radius: 50%;
+    width: min(20vw, 20vh);
+    height: min(20vw, 20vh);
+    background-color: rgba(30, 30, 30, 1);
+    border-radius: min(4vw, 4vh);
     pointer-events: auto;
     transition: transform 0.1s ease-in-out;
     z-index: 50;
 }
+
+
 
 @keyframes zoomGrid { 
     from {
@@ -275,9 +282,7 @@ nav{
     to {
         transform: scale(1);
     }}
-    
-    
-    
+       
     .verticalline {
     position: absolute;
     top: 0;
